--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+  <meta property="og:title" content="Bookstore-CMS" />
+  <meta property="og:description" content="It's a persistent bookstore" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+  <meta property="og:image" content="%PUBLIC_URL%/images/appscreenshot.png" />
+  <meta property="og:site_name" content="Bookstore-CMS" />
   <title>Bookstore CMS</title>
 </head>
 
