--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
   <meta property="og:title" content="Bookstore-CMS" />
   <meta property="og:description" content="It's a persistent bookstore" />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+
   <meta property="og:image" content="%PUBLIC_URL%/images/appscreenshot.png" />
   <meta property="og:site_name" content="Bookstore-CMS" />
   <title>Bookstore CMS</title>
